Fixed overflow problem

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,7 +81,7 @@ body {
 .entry {
 	display: inline-block;
 	font-weight: 300;
-	height: 360px;
+	height: 400px;
 	width: 300px;
 	padding: 10px 30px 0 0;
 	margin: 0;
